GUI - Stop button has been replaced with the Upload button. This will bring you to the upload tab.
Versioning - Improved delete.

New Features: 

IRC client to chat and save sessions to S3.
Console window is disabled by default and can be turned on or off.
Console window will automatically appear upon important events.
When deleting a version of a file, the bucket is refreshed to show the changes.

Features:

1. Tier buckets to and from Amazon Glacier.
2. Sync files to and from S3 storage.
3. Stream music.
4. Text editor.
5. Modify Bucket and Object ACL's.
6. Take screen shots and upload them to your bucket.
7. Bucket versioning and life cycles.
8. Graphical and console based background syncing.
9. Store multiple Amazon S3 accounts.
10. Image viewer.
11. Migrate buckets between S3 accounts.
12. Bucket search.
13. Performance testing with graphs.
14. Command-line interface.
15. IRC client that allows you to save chat sessions to S3.


Command-line Options:

java -jar CloudExplorer.jar put filename bucket
java -jar CloudExplorer.jar get filename bucket destination
java -jar CloudExplorer.jar delete filename bucket 

#List bucket contents
java -jar CloudExplorer.jar ls bucket

#List buckets
java -jar CloudExplorer.jar listbuckets

#Delete a bucket
java -jar CloudExplorer.jar rmbucket bucket

#Create a bucket
java -jar CloudExplorer.jar makebucket bucket

#Sync to S3
java -jar CloudExplorer.jar synctos3 location bucket

#Sync from S3
java -jar CloudExplorer.jar syncfroms3 destination bucket

#Performance Test - PUT
java -jar CloudExplorer.jar uploadtest bucket size threads operations

#Performance Test - GET
java -jar CloudExplorer.jar downloadtest bucket size threads operations

#Search for files 
java -jar CloudExplorer.jar search bucket what


*Please note that Cloud Explorer will use the first account listed in the config file*


IRC Options:

URL bot: This bot will show a description of links posted in the channel.
!starturlbot
!stopurlbot